Updated from Lucky's Dropbox version.

--- a/static/css/style copy.css
+++ b/static/css/style copy.css
@@ -574,7 +574,7 @@ header .brand {
   font-size: 25px;
   font-weight: normal;
   color: #34495e;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 800;
   letter-spacing: -1px;
   color: #2c3e50;
@@ -824,126 +824,290 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   color: #fff;
 }
 /**
- * Header 8 stylesheet  
+ * Header 11 stylesheet
  * */
-.header-8-startup-antiflicker {
-  border-bottom: 1px #bdc3c7 solid;
+.header-11-startup-antiflicker {
+    border-bottom: 1px #bdc3c7 solid;
 }
-.header-8 {
-  padding-top: 0;
-  padding-bottom: 0;
-  z-index: 100;
-  width: 100%;
-  height: 110px;
+.header-11 {
+    z-index: 100;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 90px;
 }
-.header-8 .header-background {
-  background: #fff;
+.header-11 .header-background {
+    background: #fff;
 }
-.header-8 .navbar {
-  position: relative;
-  top: 0;
-  z-index: 2;
-  margin: 18px 0 10px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+.header-11 .navbar {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    margin: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.header-8 .navbar.navbar-fixed-top {
-  top: 0 !important;
+.header-11 .navbar.navbar-fixed-top {
+    top: 0 !important;
 }
-.header-8 .navbar .brand {
-  padding-top: 18px;
-  font-size: 17px;
-  font-weight: normal;
-  color: #34495e;
-  font-weight: 800;
+.header-11 .navbar .navbar-form {
+    padding: 30px 0 19px 50px;
 }
-.header-8 .navbar .brand img:first-child {
-  float: left;
-  margin: -10px 15px 0 0;
+.header-11 .navbar .btn {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: 800;
 }
-.header-8 .navbar .nav {
-  position: absolute;
-  width: 100%;
-  height: 0;
-  overflow: visible;
-  text-align: center;
+.header-11 .navbar .brand {
+    padding-top: 30px !important;
+    font-size: 25px;
+    font-weight: normal;
+    color: #34495e;
+    font-weight: 800;
 }
-.header-8 .navbar .nav > li {
-  float: none;
-  display: inline-block;
-  line-height: 15px;
-  margin-left: 50px;
+.header-11 .navbar .brand img:first-child {
+    float: left;
+    margin: -10px 15px 0 0;
 }
-.header-8 .navbar .nav > li:first-child {
-  margin-left: 0;
+.header-11 .navbar .nav > li {
+    margin-left: 25px;
 }
-.header-8 .navbar .nav > li > a {
-  padding: 30px 0 22px;
-  font-size: 16px;
-  font-weight: normal;
-  color: #7f8c8d;
-  font-weight: 800;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #95a5a6;
+.header-11 .navbar .nav > li:first-child {
+    margin-left: 0;
 }
-.header-8 .navbar .nav > li > a:hover,
-.header-8 .navbar .nav > li > a:focus,
-.header-8 .navbar .nav > li > a.active {
-  color: #34495e;
+.header-11 .navbar .nav > li:active a,
+.header-11 .navbar .nav > li.active a {
+    color: #16a085;
 }
-.header-8 .navbar .nav > li.active > a {
-  color: #34495e;
+.header-11 .navbar .nav > li:active a:hover,
+.header-11 .navbar .nav > li.active a:hover,
+.header-11 .navbar .nav > li:active a:focus,
+.header-11 .navbar .nav > li.active a:focus,
+.header-11 .navbar .nav > li:active a.active,
+.header-11 .navbar .nav > li.active a.active {
+    color: #16a085;
 }
-.header-8 .navbar .nav > li.active > a:hover,
-.header-8 .navbar .nav > li.active > a:focus,
-.header-8 .navbar .nav > li.active > a.active {
-  color: #34495e;
+.header-11 .navbar .nav > li > a {
+    padding: 41px 0 27px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #7f8c8d;
+    font-weight: 800;
+    color: inherit;
 }
-.header-8 .navbar .navbar-header {
-  position: relative;
-  z-index: 2;
+.header-11 .navbar .nav > li > a:hover,
+.header-11 .navbar .nav > li > a:focus,
+.header-11 .navbar .nav > li > a.active {
+    color: #16a085;
 }
-.header-8 .navbar .navbar-toggle {
-  background-image: url("../../startup/common-files/icons/menu-icon-header-8@2x.png");
-  -webkit-background-size: 17px 12px;
-  -moz-background-size: 17px 12px;
-  -o-background-size: 17px 12px;
-  background-size: 17px 12px;
-  margin-top: 22px;
+.header-11 .navbar .navbar-toggle {
+    background-image: url("../../startup/common-files/icons/menu-icon-header-8@2x.png");
+    -webkit-background-size: 17px 12px;
+    -moz-background-size: 17px 12px;
+    -o-background-size: 17px 12px;
+    background-size: 17px 12px;
+    margin-top: 36px;
 }
-.header-8-sub {
-  position: relative;
-  padding-top: 95px;
-  padding-bottom: 0;
+.header-11-sub {
+    padding-top: 110px;
+    padding-bottom: 110px;
+    color: #bdc3c7;
+    position: relative;
 }
-.header-8-sub h3 {
-  font-size: 35px;
-  font-weight: normal;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: 300;
-  color: #2c3e50;
+.header-11-sub h3 {
+    font-size: 33px;
+    font-weight: normal;
+    color: #2c3e50;
+    margin-bottom: 15px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
 }
-.header-8-sub .lead {
-  font-size: 24px;
-  font-weight: normal;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-align: center;
-  font-weight: 300;
-  color: #2c3e50;
+.header-11-sub p {
+    font-size: 16px;
+    font-weight: normal;
+    color: #7f8c8d;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.header-8-sub .background {
-  background-image: url("../../startup/common-files/img/Italy_001.jpg");
-  background-position: 50% 0;
-  opacity: 100;
-  filter: alpha(opacity=10000);
-  opacity: 1;
-  filter: alpha(opacity=100);
+.header-11-sub .additional-links {
+    opacity: 80;
+    filter: alpha(opacity=8000);
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    font-size: 12px;
+    font-weight: normal;
+    color: #1b1f23;
 }
-.header-8-sub img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 60px;
+.header-11-sub .additional-links a {
+    text-decoration: underline;
+    color: #1b1f23;
+}
+.header-11-sub .additional-links a:hover,
+.header-11-sub .additional-links a:focus,
+.header-11-sub .additional-links a.active {
+    color: #16191c;
+}
+.header-11-sub .background {
+    background-image: url("../../startup/common-files/img/Brazil_002.jpg");
+    opacity: 100;
+    filter: alpha(opacity=10000);
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+@media (max-width: 767px) {
+    .header-11-sub .background {
+        background: #f6f6f2;
+    }
+}
+@media (max-width: 767px) {
+    .header-11-sub {
+        padding-top: 68px;
+        padding-bottom: 70px;
+    }
+    .header-11-sub .player {
+        margin: 40px 0 25px;
+    }
+}
+@media (max-width: 480px) {
+    .header-11-sub {
+        padding-top: 68px;
+        padding-bottom: 70px;
+    }
+    .header-11-sub h3 {
+        font-size: 26px;
+        font-weight: normal;
+        color: #2c3e50;
+    }
+}
+.header-11-sub .signup-form form {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.header-11-sub .signup-form form .form-group:first-child + .form-group {
+    display: table;
+    width: 100%;
+}
+.header-11-sub .signup-form form .form-group:first-child + .form-group > div {
+    display: table-cell;
+    width: 50%;
+    padding-left: 5px;
+}
+@media (max-width: 767px) {
+    .header-11-sub .signup-form form .form-group:first-child + .form-group > div {
+        padding-left: 9px;
+    }
+}
+.header-11-sub .signup-form form .form-group:first-child + .form-group > div:first-child {
+    padding-left: 0;
+    padding-right: 5px;
+}
+@media (max-width: 767px) {
+    .header-11-sub .signup-form form .form-group:first-child + .form-group > div:first-child {
+        padding-right: 9px;
+    }
+}
+.header-11-sub .signup-form form .form-group:first-child + .form-group input {
+    width: 100%;
+}
+@media (max-width: 767px) {
+    .header-11-sub .signup-form form .btn {
+        margin: 9px 0;
+    }
+}
+.header-11-sub .signup-form form .btn.btn-info {
+    font-size: 17px;
+    font-weight: 500;
+}
+.header-11-sub .signup-form form .btn.btn-info:hover,
+.header-11-sub .signup-form form .btn.btn-info:focus {
+    background-color: #16a085;
+}
+.header-11-sub .signup-form form .btn.btn-info:active,
+.header-11-sub .signup-form form .btn.btn-info.active {
+    background-color: #138871;
+}
+.header-11-sub .signup-form form input[type="text"],
+.header-11-sub .signup-form form input[type="password"] {
+    border-color: white !important;
+    color: #2c3e50;
+    font-weight: 500;
+}
+.header-11-sub .signup-form form input[type="text"]:-moz-placeholder,
+.header-11-sub .signup-form form input[type="password"]:-moz-placeholder {
+    color: #2c3e50;
+}
+.header-11-sub .signup-form form input[type="text"]::-moz-placeholder,
+.header-11-sub .signup-form form input[type="password"]::-moz-placeholder {
+    color: #2c3e50;
+    opacity: 1;
+}
+.header-11-sub .signup-form form input[type="text"]:-ms-input-placeholder,
+.header-11-sub .signup-form form input[type="password"]:-ms-input-placeholder {
+    color: #2c3e50;
+}
+.header-11-sub .signup-form form input[type="text"]::-webkit-input-placeholder,
+.header-11-sub .signup-form form input[type="password"]::-webkit-input-placeholder {
+    color: #2c3e50;
+}
+.header-11-sub .signup-form form input[type="text"].placeholder,
+.header-11-sub .signup-form form input[type="password"].placeholder {
+    color: #2c3e50;
+}
+@media (max-width: 767px) {
+    .header-11-sub .signup-form form input[type="text"],
+    .header-11-sub .signup-form form input[type="password"] {
+        height: 41px;
+    }
+}
+@media (max-width: 767px) {
+    .header-11-sub .signup-form form {
+        margin-top: 25px;
+    }
+}
+.header-11-sub .player {
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    background: #bdc3c7;
+    position: relative;
+    overflow: hidden;
+    height: 360px;
+}
+.header-11-sub .player .btn-play {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    width: 60px;
+    padding-left: 16px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+.header-11-sub .player .btn-play.btn-primary {
+    background-color: #16a085;
+}
+.header-11-sub .player .btn-play.btn-primary:hover,
+.header-11-sub .player .btn-play.btn-primary:focus {
+    background-color: #45b39d;
+}
+.header-11-sub .player .btn-play.btn-primary:active,
+.header-11-sub .player .btn-play.btn-primary.active {
+    background-color: #138871;
+}
+.header-11-sub .player > iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    display: block;
+}
+@media (max-width: 480px) {
+    .header-11-sub .player {
+        margin: 40px auto 45px;
+        height: 160px;
+        max-width: 290px;
+    }
 }
 /**
  * Content 5 stylesheet  
