reorganized the list of projects with some style changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2329,8 +2329,8 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
  * Content 10 stylesheet  
  * */
 .content-10 {
-  padding-top: 130px;
-  padding-bottom: 125px;
+  padding-top: 50px;
+  padding-bottom: 120px;
   position: relative;
 }
 .content-10 .carousel {
@@ -2384,13 +2384,35 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   opacity: 1;
   z-index: 1;
 }
+.content-10 h2 {
+  margin: 0 0 21px;
+  font-size: 35px;
+  font-weight: bold;
+  color: #2c3e50;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-bottom: 60px;
+  text-align: center;
+}
 .content-10 h3 {
   font-size: 30px;
   font-weight: normal;
   color: #2c3e50;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 30px;
   margin-bottom: 48px;
   font-weight: 300;
+}
+.content-10 ul {
+  font-size: 16px;
+  font-weight: normal;
+  color: #7f8c8d;
+  padding-top: 5px;
+}
+.content-10 li {
+  font-size: 16px;
+  font-weight: normal;
+  color: #7f8c8d;
+  line-height: 25px;
 }
 .content-10 p {
   font-size: 16px;
