updated for SDL

--- a/css/agency.css
+++ b/css/agency.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - Agency v3.3.7+1 (http://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2016 Start Bootstrap
+ * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
@@ -152,7 +152,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-brand {
   color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  font-family: 'Open Sans', sans-serif;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
@@ -226,10 +226,10 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/newyork.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -259,7 +259,7 @@ header .intro-text .intro-heading {
 @media (min-width: 768px) {
   header .intro-text {
     padding-top: 300px;
-    padding-bottom: 200px;
+    padding-bottom: 500px;
   }
   header .intro-text .intro-lead-in {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -271,6 +271,7 @@ header .intro-text .intro-heading {
   header .intro-text .intro-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
+    text-transform: none;
     font-weight: 700;
     font-size: 75px;
     line-height: 75px;
@@ -465,14 +466,14 @@ section h3.section-subheading {
 }
 @media (min-width: 768px) {
   .timeline:before {
-    left: 50%;
+    left: 0%;
   }
   .timeline > li {
     margin-bottom: 100px;
     min-height: 100px;
   }
   .timeline > li .timeline-panel {
-    width: 41%;
+    width: 90%;
     float: left;
     padding: 0 20px 20px 30px;
     text-align: right;
@@ -480,7 +481,7 @@ section h3.section-subheading {
   .timeline > li .timeline-image {
     width: 100px;
     height: 100px;
-    left: 50%;
+    left: 0%;
     margin-left: -50px;
   }
   .timeline > li .timeline-image h4 {
