--- a/less/agency.less
+++ b/less/agency.less
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 
     .navbar-brand {
         float: right;
-        color: @theme-primary;
+        color: black;
 
         font-family: 'Open Sans', sans-serif;
         &:hover,
@@ -95,6 +95,12 @@ h1, h2, h3, h4, h5, h6 {
         &.active {
             color: darken(@theme-primary, 10%);
         }
+    }
+    .navbar-image {
+        width: 40px;
+        margin-left: -15px;
+        margin-bottom: -30px;
+        margin-right: 30px;
     }
     .navbar-collapse {
         border-color: fade(white, 2%);
@@ -116,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
                 .heading-font;
                 font-weight: 400;
                 letter-spacing: 1px;
-                color: white;
+                color: black;
                 &:hover,
                 &:focus {
                     color: @theme-primary;
@@ -151,6 +157,9 @@ h1, h2, h3, h4, h5, h6 {
             -moz-transition: all 0.3s;
             transition: all 0.3s;
         }
+        //.navbar-image{
+        //
+        //}
         .navbar-nav>.active>a {
             border-radius: 3px;
         }
@@ -164,19 +173,30 @@ h1, h2, h3, h4, h5, h6 {
         background-color: @gray-darker;
         padding: 10px 0;
         .navbar-brand {
+            color: white;
             font-size: 1.5em;
         }
+        .navbar-image{
+            width: 30px;
+        margin-left: -15px;
+        margin-bottom: -30px;
+        margin-right: 30px;
+        }
+        .navbar-nav>.active>a {
+            color: black;
+        }
+        .nav{li {a {color: white;}}}
     }
 }
 
 header {
-    background-image: url('../img/newyork.jpg');
+    background-image: url('../img/RI2.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: top center;
+    background-position: 0% 30%;
     .background-cover;
     text-align: center;
-    color: white;
+    color: black;
     .intro-text {
         padding-top: 100px;
         padding-bottom: 50px;
@@ -201,8 +221,8 @@ header {
 @media(min-width:768px) {
     header {
         .intro-text {
-            padding-top: 300px;
-            padding-bottom: 500px;
+            padding-top: 200px;
+            padding-bottom: 300px;
             .intro-lead-in {
                 .serif-font;
                 font-style: italic;
@@ -756,7 +776,7 @@ ul.social-buttons {
 
 ::selection {
     text-shadow: none;
-    background: @theme-primary;
+    background: yellow;
 }
 
 img::selection {
