updated mobile version

--- a/css/agency.css
+++ b/css/agency.css
@@ -485,6 +485,9 @@ section h3.section-subheading {
   margin-bottom: 0;
 }
 @media (min-width: 768px) {
+  .navbar-custom .navbar-brand {
+    font-size: 1.3em;
+  }
   .timeline:before {
     left: 0%;
   }
@@ -516,6 +519,9 @@ section h3.section-subheading {
   }
 }
 @media (min-width: 992px) {
+  .navbar-custom .navbar-brand {
+    font-size: 2em;
+  }
   .timeline > li {
     min-height: 150px;
   }
@@ -553,6 +559,36 @@ section h3.section-subheading {
   }
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
+  }
+}
+@media (max-width: 767px) {
+  #portfolio .portfolio-item .portfolio-caption {
+    max-height: 250px;
+  }
+  header .intro-text .intro-heading {
+    font-weight: 300;
+    font-size: 35px;
+    line-height: 50px;
+    margin-bottom: 25px;
+  }
+  .fa-4x {
+    font-size: 3em;
+  }
+  .navbar-custom .navbar-brand {
+    color: white;
+    margin-right: 35px;
+  }
+  .navbar-custom .navbar-toggle {
+    color: black;
+    text-align: left;
+  }
+  .navbar-custom .nav > li > a {
+    color: white;
+  }
+  .navbar-custom .navbar-image {
+    width: 30px;
+    margin-left: 15px;
+    margin-right: -30px;
   }
 }
 .team-hover {
