--- a/less/agency.less
+++ b/less/agency.less
@@ -556,6 +556,9 @@ section {
 
 @media(max-width:767px) {
 
+    header{
+        background-position: 70% 30%;
+    }
     .textshow {
         display: block;
 
@@ -564,17 +567,20 @@ section {
         display: block;
     }
     #portfolio .portfolio-item .portfolio-caption{
-        max-height: 300px;
+        max-height: 330px;
     }
 
     header .intro-text  .intro-heading{
             //.heading-font;
             margin-top: 40px;
-            margin-bottom: 100px;
+            margin-bottom: 40px;
             font-weight: 600;
             font-size: 30px;
             line-height: 30px;
             //margin-bottom: 25px;
+    }
+    header .intro-text > a {
+        margin-bottom: 100px;
     }
     .fa-4x {
         font-size: 3em;
