--- a/less/agency.less
+++ b/less/agency.less
@@ -573,14 +573,15 @@ section {
     header .intro-text  .intro-heading{
             //.heading-font;
             margin-top: 40px;
-            margin-bottom: 100px;
+            margin-bottom: 70%;
             font-weight: 600;
             font-size: 30px;
             line-height: 30px;
             //margin-bottom: 25px;
     }
     header .intro-text > a {
-        margin-bottom: 60px;
+        position: relative;
+        bottom:20px;
     }
     .fa-4x {
         font-size: 3em;
