updated mobile version

--- a/less/agency.less
+++ b/less/agency.less
@@ -557,7 +557,7 @@ section {
 @media(max-width:767px) {
 
     header{
-        background-position: 70% 30%;
+        background-position: 70% 60%;
     }
     .textshow {
         display: block;
@@ -573,7 +573,7 @@ section {
     header .intro-text  .intro-heading{
             //.heading-font;
             margin-top: 0px;
-            margin-bottom: 80%;
+            margin-bottom: 240px;
             font-weight: 600;
             font-size: 30px;
             line-height: 30px;
@@ -581,7 +581,7 @@ section {
     }
     header .intro-text > a {
         position: relative;
-        bottom:20px;
+        bottom:10px;
     }
     .fa-4x {
         font-size: 3em;
