--- a/css/creative.css
+++ b/css/creative.css
@@ -207,7 +207,7 @@ header .header-content .header-content-inner p {
   margin-top: 0;
 }
 .service-box {
-  max-width: 400px;
+  max-width: 500px;
   margin: 50px auto 0;
 }
 @media (min-width: 992px) {
@@ -218,6 +218,20 @@ header .header-content .header-content-inner p {
 .service-box p {
   margin-bottom: 0;
 }
+
+.service-box2 {
+  max-width: 800px;
+  margin: 50px auto 0;
+}
+@media (min-width: 992px) {
+  .service-box2 {
+    margin: 20px auto 0;
+  }
+}
+.service-box2 p {
+  margin-bottom: 0;
+}
+
 .portfolio-box {
   position: relative;
   display: block;
