--- a/css/creative.css
+++ b/css/creative.css
@@ -156,7 +156,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header4.jpg');
+  /*background-image: url('../img/header4.jpg');*/
   text-align: center;
   color: white;
 }
