--- a/css/creative2.css
+++ b/css/creative2.css
@@ -148,7 +148,7 @@ aside {
 
 
 header {
-  position: relative;
+/*  position: relative;
   width: 100%;
   min-height: auto;
   -webkit-background-size: cover;
@@ -158,30 +158,30 @@ header {
   background-position: center;
   background-image: url('../img/london2.jpg');
   text-align: center;
-  color: white;
+  color: white;*/
 }
 header .header-content {
-  position: relative;
+/*  position: relative;
   text-align: center;
   padding: 100px 15px 100px;
-  width: 100%;
+  width: 100%;*/
 }
 header .header-content .header-content-inner h1 {
-  font-weight: 600;
-  /*text-transform: uppercase;*/
+/*  font-weight: 600;
+  text-transform: uppercase;
   margin-top: 10%;
-  margin-bottom: 0;
+  margin-bottom: 0;*/
 }
 header .header-content .header-content-inner hr {
-  margin: 30px auto;
+ /* margin: 30px auto;*/
 }
 header .header-content .header-content-inner p {
-  font-weight: 300;
+/*  font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
   font-size: 16px;
-  margin-bottom: 50px;
+  margin-bottom: 50px;*/
 }
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   header {
     min-height: 100%;
   }
@@ -204,7 +204,7 @@ header .header-content .header-content-inner p {
     margin-left: auto;
     margin-right: auto;
   }
-}
+}*/
 .section-heading {
   margin-top: 0;
 }
