--- a/css/agency.css
+++ b/css/agency.css
@@ -246,7 +246,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/RI2.jpg');
+  background-image: url('../img/campus/_1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: 0% 30%;
@@ -255,7 +255,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   text-align: center;
-  color: black;
+  color: white;
 }
 header .intro-text {
   padding-top: 100px;
@@ -274,7 +274,6 @@ header .intro-text .intro-heading {
   font-weight: 700;
   font-size: 50px;
   line-height: 50px;
-  margin-bottom: 25px;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -287,6 +286,7 @@ header .intro-text .intro-heading {
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 25px;
+    color:white;
   }
   header .intro-text .intro-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
