--- a/css/agency.css
+++ b/css/agency.css
@@ -246,7 +246,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/_5.jpg');
+  background-image: url('../img/homepage.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: 0% 30%;
