--- a/less/agency.less
+++ b/less/agency.less
@@ -190,13 +190,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-    background-image: url('../img/RI2.jpg');
+    background-image: url('../img/homepage.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: 0% 30%;
     .background-cover;
     text-align: center;
-    color: black;
+    color: white;
     .intro-text {
         padding-top: 100px;
         padding-bottom: 50px;
@@ -234,7 +234,7 @@ header {
                 .heading-font;
                 text-transform: none;
                 font-weight: 700;
-                font-size: 75px;
+                font-size: 50px;
                 line-height: 75px;
                 margin-bottom: 50px;
             }
@@ -283,12 +283,14 @@ section {
         .portfolio-link {
             display: block;
             position: relative;
-            max-width: 400px;
+            max-width: 320px;
+            background-color: white;
+            padding: 25px;
             margin: 0 auto;
             .portfolio-hover {
                 background: fade(@theme-primary, 90%);
                 position: absolute;
-                width: 100%;
+                width: 243px;
                 height: 100%;
                 opacity: 0;
                 transition: all ease 0.5s;
@@ -302,6 +304,7 @@ section {
                     width: 100%;
                     height: 20px;
                     font-size: 20px;
+                    padding: 25px;
                     text-align: center;
                     top: 50%;
                     margin-top: -12px;
@@ -317,9 +320,9 @@ section {
             }
         }
         .portfolio-caption {
-            max-width: 400px;
+            max-width: 320px;
             margin: 0 auto;
-            height: 250px;
+            height: 200px;
             background-color: white;
             text-align: center;
             padding: 25px;
@@ -330,7 +333,7 @@ section {
             p {
                 .serif-font;
                 //font-style: ;
-                font-size: 16px;
+                font-size: 14px;
                 margin: 0;
             }
         }
